# weatherbuoy

./: .gitignore  CMakeLists.txt  changehistory.md  firmwareversion.js  package-lock.json  partitions.csv  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.latestold
cad/: maximet stand.stl  solarpanel blind cable plug 6mm.stl  weatherbuoy battery lid.stl  weatherbuoy pcb.brd  weatherbuoy pcb.fbrd  weatherbuoy_2v05.nc  weatherbuoypcbeagle.brd
components/cellular/: CMakeLists.txt  Cellular.cpp  Cellular.h  Kconfig.projbuild
components/esp32-owb/: CMakeLists.txt  owb.c  owb.h
components/espstring/: EspString.cpp  EspString.h
components/esputil/: CMakeLists.txt  esputil.cpp  esputil.h
components/max471meter/: CMakeLists.txt  Kconfig.projbuild  Max471Meter.cpp  Max471Meter.h
components/modem/: CMakeLists.txt  Modem.cpp  Modem.h
components/nmea2000/: CMakeLists.txt  ESP32_CAN_def.h  MovingAverage.h  N2kCANMsg.h  N2kDef.h  N2kDeviceList.cpp  N2kDeviceList.h  N2kGroupFunction.cpp  N2kGroupFunction.h  N2kGroupFunctionDefaultHandlers.cpp  N2kGroupFunctionDefaultHandlers.h  N2kMessages.cpp  N2kMessages.h  N2kMessagesEnumToStr.h  N2kMsg.cpp  N2kMsg.h  N2kStream.cpp  N2kStream.h  N2kStream_esp32.cpp  N2kStream_esp32.h  N2kTypes.h  NMEA2000.cpp  NMEA2000.h  NMEA2000StdTypes.h  NMEA2000_CAN.h.notused  NMEA2000_CompilerDefns.h  NMEA2000_esp32.cpp  NMEA2000_esp32.h
components/serial/: CMakeLists.txt  Serial.cpp  Serial.h
components/tinyekf/: readme.md
components/web/: CMakeLists.txt  HttpRequestParser.cpp  HttpResponseParser.cpp  Url.cpp  WebClient.cpp  WebClient.h
components/wifi/: CMakeLists.txt  Wifi.cpp  Wifi.h
main/: Alarm.cpp  Alarm.h  CMakeLists.txt  Config.cpp  Config.h  Data.h  DataQueue.cpp  DataQueue.h  Display.cpp  Display.h  Esp32WeatherBuoy.cpp  Esp32WeatherBuoy.h  GeoUtil.h  Kconfig.projbuild  Maximet.cpp  Maximet.h  MaximetSimulator.cpp  MaximetSimulator.h  MovingAverage.h  NmeaDisplay.cpp  NmeaDisplay.h  ReadMaximet.cpp  ReadMaximet.h  RtcVariables.cpp  RtcVariables.h  SendData.cpp  SendData.h  SimulateMaximet.cpp  SimulateMaximet.h  TemperatureSensors.cpp  TemperatureSensors.h  VelocityVector.cpp  VelocityVector.h  Watchdog.cpp  Watchdog.h  certificate.pem
maximetsimulator/: boot.py  gmx501fulloutput.txt  jupytermicropythonkernal.ipynb  main.py  miniterm.cmd  readme.md  runmain.cmd  wifimgr.py
maximetsimulator/.ipynb_checkpoints/: jupytermicropythonkernal-checkpoint.ipynb
testreceiver/: maximetparser.html  oldtesthttpsserver.py  package-lock.json  package.json  testreceiver.js  updatefirmware.cmd  weatherbuoy.html  weatherbuoy.js
tlsproxy/: package.json  tlsproxy.js
wiring/: readme.md
